gen/GrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, NUMBER=41, CHAR=42, DOBULE=43, STRING=44, STRING_SMALL=45, 
		BOOL_JAVA=46, BOOL_PYTHON=47, INT_TYPE=48, CHAR_TYPE=49, STRING_TYPE=50, 
		DOUBLE_TYPE=51, FLOAT_TYPE=52, BOOL_TYPE=53, ID=54, WS=55;
	public static final int
		RULE_prog = 0, RULE_java = 1, RULE_python = 2, RULE_p_line = 3, RULE_j_line = 4, 
		RULE_j_function_call = 5, RULE_j_args = 6, RULE_j_arg = 7, RULE_p_function_call = 8, 
		RULE_p_args = 9, RULE_p_arg = 10, RULE_j_declaration = 11, RULE_j_array_declaration = 12, 
		RULE_j_initialization = 13, RULE_j_int_initialization = 14, RULE_j_string_initialization = 15, 
		RULE_j_bool_initialization = 16, RULE_j_float_initialization = 17, RULE_j_double_initialization = 18, 
		RULE_j_char_initialization = 19, RULE_j_array_initialization = 20, RULE_p_assignment = 21, 
		RULE_p_rhs_value = 22, RULE_p_string = 23, RULE_p_list = 24, RULE_j_type = 25, 
		RULE_j_loopFun = 26, RULE_statement = 27, RULE_whileStatement = 28, RULE_conditionStatement = 29, 
		RULE_forStatement = 30, RULE_basicForStatement = 31, RULE_stmt = 32, RULE_block = 33, 
		RULE_forInit = 34, RULE_localVariableDeclaration = 35, RULE_forUpdate = 36, 
		RULE_expression = 37, RULE_condition_greater_less = 38, RULE_condition_equal_unequal = 39, 
		RULE_incDecExpression = 40, RULE_p_forloop = 41, RULE_p_exp = 42, RULE_p_range = 43, 
		RULE_j_if = 44, RULE_j_condition = 45, RULE_p_if = 46, RULE_p_condition = 47, 
		RULE_j_arg_code_block = 48, RULE_j_arg_condition = 49, RULE_j_arg_function = 50, 
		RULE_j_arg_special_function = 51, RULE_j_arg_universal = 52, RULE_p_arg_code_block = 53, 
		RULE_p_arg_condition = 54, RULE_p_arg_function = 55, RULE_p_arg_special_function = 56, 
		RULE_p_arg_universal = 57, RULE_j_seqSeq = 58, RULE_p_seqSeq = 59, RULE_j_choice = 60, 
		RULE_p_choice = 61, RULE_p_repeat = 62, RULE_j_repeat = 63, RULE_j_loop = 64, 
		RULE_p_loop = 65, RULE_j_para = 66, RULE_p_para = 67, RULE_j_cond = 68, 
		RULE_p_cond = 69;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "java", "python", "p_line", "j_line", "j_function_call", "j_args", 
			"j_arg", "p_function_call", "p_args", "p_arg", "j_declaration", "j_array_declaration", 
			"j_initialization", "j_int_initialization", "j_string_initialization", 
			"j_bool_initialization", "j_float_initialization", "j_double_initialization", 
			"j_char_initialization", "j_array_initialization", "p_assignment", "p_rhs_value", 
			"p_string", "p_list", "j_type", "j_loopFun", "statement", "whileStatement", 
			"conditionStatement", "forStatement", "basicForStatement", "stmt", "block", 
			"forInit", "localVariableDeclaration", "forUpdate", "expression", "condition_greater_less", 
			"condition_equal_unequal", "incDecExpression", "p_forloop", "p_exp", 
			"p_range", "j_if", "j_condition", "p_if", "p_condition", "j_arg_code_block", 
			"j_arg_condition", "j_arg_function", "j_arg_special_function", "j_arg_universal", 
			"p_arg_code_block", "p_arg_condition", "p_arg_function", "p_arg_special_function", 
			"p_arg_universal", "j_seqSeq", "p_seqSeq", "j_choice", "p_choice", "p_repeat", 
			"j_repeat", "j_loop", "p_loop", "j_para", "p_para", "j_cond", "p_cond"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "'()'", "','", "'[]'", "'='", "'new'", "'['", 
			"']'", "'{'", "'}'", "'while'", "'for'", "'>'", "'<'", "'>='", "'<='", 
			"'=='", "'!='", "'++'", "'--'", "'in'", "':'", "'range'", "'if'", "'||'", 
			"'&&'", "'if '", "'or'", "'and'", "'`'", "'``'", "'~'", "'seqSeq('", 
			"'choice('", "'repeat('", "'Loop('", "'Para('", "'Cond('", null, null, 
			null, null, null, null, null, "'int'", "'char'", "'String'", "'double'", 
			"'float'", "'boolean'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "NUMBER", "CHAR", "DOBULE", "STRING", "STRING_SMALL", 
			"BOOL_JAVA", "BOOL_PYTHON", "INT_TYPE", "CHAR_TYPE", "STRING_TYPE", "DOUBLE_TYPE", 
			"FLOAT_TYPE", "BOOL_TYPE", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public J_seqSeqContext j_seqSeq() {
			return getRuleContext(J_seqSeqContext.class,0);
		}
		public P_seqSeqContext p_seqSeq() {
			return getRuleContext(P_seqSeqContext.class,0);
		}
		public J_choiceContext j_choice() {
			return getRuleContext(J_choiceContext.class,0);
		}
		public P_choiceContext p_choice() {
			return getRuleContext(P_choiceContext.class,0);
		}
		public J_repeatContext j_repeat() {
			return getRuleContext(J_repeatContext.class,0);
		}
		public P_repeatContext p_repeat() {
			return getRuleContext(P_repeatContext.class,0);
		}
		public J_loopContext j_loop() {
			return getRuleContext(J_loopContext.class,0);
		}
		public P_loopContext p_loop() {
			return getRuleContext(P_loopContext.class,0);
		}
		public J_paraContext j_para() {
			return getRuleContext(J_paraContext.class,0);
		}
		public P_paraContext p_para() {
			return getRuleContext(P_paraContext.class,0);
		}
		public J_condContext j_cond() {
			return getRuleContext(J_condContext.class,0);
		}
		public P_condContext p_cond() {
			return getRuleContext(P_condContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(140);
				j_seqSeq();
				}
				break;
			case 2:
				{
				setState(141);
				p_seqSeq();
				}
				break;
			case 3:
				{
				setState(142);
				j_choice();
				}
				break;
			case 4:
				{
				setState(143);
				p_choice();
				}
				break;
			case 5:
				{
				setState(144);
				j_repeat();
				}
				break;
			case 6:
				{
				setState(145);
				p_repeat();
				}
				break;
			case 7:
				{
				setState(146);
				j_loop();
				}
				break;
			case 8:
				{
				setState(147);
				p_loop();
				}
				break;
			case 9:
				{
				setState(148);
				j_para();
				}
				break;
			case 10:
				{
				setState(149);
				p_para();
				}
				break;
			case 11:
				{
				setState(150);
				j_cond();
				}
				break;
			case 12:
				{
				setState(151);
				p_cond();
				}
				break;
			}
			setState(154);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JavaContext extends ParserRuleContext {
		public List<J_lineContext> j_line() {
			return getRuleContexts(J_lineContext.class);
		}
		public J_lineContext j_line(int i) {
			return getRuleContext(J_lineContext.class,i);
		}
		public JavaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_java; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterJava(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitJava(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitJava(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JavaContext java() throws RecognitionException {
		JavaContext _localctx = new JavaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_java);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 35747322109386752L) != 0) {
				{
				{
				setState(156);
				j_line();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PythonContext extends ParserRuleContext {
		public List<P_lineContext> p_line() {
			return getRuleContexts(P_lineContext.class);
		}
		public P_lineContext p_line(int i) {
			return getRuleContext(P_lineContext.class,i);
		}
		public PythonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_python; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterPython(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitPython(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitPython(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PythonContext python() throws RecognitionException {
		PythonContext _localctx = new PythonContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_python);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 18014399046369280L) != 0) {
				{
				{
				setState(162);
				p_line();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class P_lineContext extends ParserRuleContext {
		public P_function_callContext p_function_call() {
			return getRuleContext(P_function_callContext.class,0);
		}
		public P_assignmentContext p_assignment() {
			return getRuleContext(P_assignmentContext.class,0);
		}
		public P_forloopContext p_forloop() {
			return getRuleContext(P_forloopContext.class,0);
		}
		public P_ifContext p_if() {
			return getRuleContext(P_ifContext.class,0);
		}
		public P_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterP_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitP_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitP_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final P_lineContext p_line() throws RecognitionException {
		P_lineContext _localctx = new P_lineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_p_line);
		try {
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				p_function_call();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				p_assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				p_forloop();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(171);
				p_if();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class J_lineContext extends ParserRuleContext {
		public J_declarationContext j_declaration() {
			return getRuleContext(J_declarationContext.class,0);
		}
		public J_array_declarationContext j_array_declaration() {
			return getRuleContext(J_array_declarationContext.class,0);
		}
		public J_initializationContext j_initialization() {
			return getRuleContext(J_initializationContext.class,0);
		}
		public J_function_callContext j_function_call() {
			return getRuleContext(J_function_callContext.class,0);
		}
		public J_loopFunContext j_loopFun() {
			return getRuleContext(J_loopFunContext.class,0);
		}
		public J_ifContext j_if() {
			return getRuleContext(J_ifContext.class,0);
		}
		public J_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_j_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterJ_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitJ_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitJ_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final J_lineContext j_line() throws RecognitionException {
		J_lineContext _localctx = new J_lineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_j_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(180);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(174);
				j_declaration();
				}
				break;
			case 2:
				{
				setState(175);
				j_array_declaration();
				}
				break;
			case 3:
				{
				setState(176);
				j_initialization();
				}
				break;
			case 4:
				{
				setState(177);
				j_function_call();
				}
				break;
			case 5:
				{
				setState(178);
				j_loopFun();
				}
				break;
			case 6:
				{
				setState(179);
				j_if();
				}
				break;
			}
			setState(182);
			match(T__0);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class J_function_callContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public J_argsContext j_args() {
			return getRuleContext(J_argsContext.class,0);
		}
		public J_function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_j_function_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterJ_function_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitJ_function_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitJ_function_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final J_function_callContext j_function_call() throws RecognitionException {
		J_function_callContext _localctx = new J_function_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_j_function_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(ID);
			setState(190);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				{
				setState(185);
				match(T__1);
				setState(186);
				j_args();
				setState(187);
				match(T__2);
				}
				break;
			case T__3:
				{
				setState(189);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class J_argsContext extends ParserRuleContext {
		public List<J_argContext> j_arg() {
			return getRuleContexts(J_argContext.class);
		}
		public J_argContext j_arg(int i) {
			return getRuleContext(J_argContext.class,i);
		}
		public J_argsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_j_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterJ_args(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitJ_args(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitJ_args(this);
			else return visitor.visitChildren(this);
		}
	}

	public final J_argsContext j_args() throws RecognitionException {
		J_argsContext _localctx = new J_argsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_j_args);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(192);
					j_arg();
					setState(193);
					match(T__4);
					}
					} 
				}
				setState(199);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(200);
			j_arg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class J_argContext extends ParserRuleContext {
		public TerminalNode BOOL_JAVA() { return getToken(GrammarParser.BOOL_JAVA, 0); }
		public J_function_callContext j_function_call() {
			return getRuleContext(J_function_callContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(GrammarParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(GrammarParser.STRING, 0); }
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public J_argContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_j_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterJ_arg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitJ_arg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitJ_arg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final J_argContext j_arg() throws RecognitionException {
		J_argContext _localctx = new J_argContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_j_arg);
		try {
			setState(207);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(202);
				match(BOOL_JAVA);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(203);
				j_function_call();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(204);
				match(NUMBER);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(205);
				match(STRING);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(206);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
